# python-fastapi-template

./: Dockerfile  README.md  log_config.yml  pyproject.toml
.github/workflows/: python.yml
app/: main.py
app/api/: users.py
app/models/: user.py
app/services/: user_service.py
tests/: conftest.py
tests/api/: test_users.py
tests/services/: test_user_service.py
